# nonebot_plugin_dingzhen

./: README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_dingzhen/: __init__ (1).py  __init__.py  dingzhen.py
