[tool.poetry]
name = "nonebot_plugin_dingzhen"
version = "1.0.5.2"
description = "一个为 NoneBot2 提供 QQ 丁真语音生成功能的插件，支持轻量级自定义。"
authors = ["Noobie III <admin@noobie.top>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/Pochinki98/nonebot_plugin_dingzhen"
repository = "https://github.com/Pochinki98/nonebot_plugin_dingzhen"

# 标准写法是把依赖放进 [tool.poetry.dependencies]
[tool.poetry.dependencies]
python = ">=3.8"
nonebot2 = ">=2.0.0-beta.1"
httpx = ">=0.24.0"
aiofiles = ">=23.1.0"
nonebot-adapter-onebot = ">=2.0.0"

[tool.poetry.extras]
dev = ["pytest>=5.2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
